// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PostsTemplate /> should match snapshot 1`] = `
.c26 {
  padding: 0 3.2rem;
  margin: 3.2rem 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c27 {
  background: #000000;
  color: #FFFFFF;
  border: none;
  padding: 1.6rem 3.2rem;
  cursor: pointer;
}

.c27:disabled {
  background: #AAAAAA;
}

.c12 {
  color: #000000;
  line-height: 1.2;
  font-size: 2.4rem;
  text-transform: uppercase;
}

.c18 {
  color: #000000;
  line-height: 1.2;
  font-size: 2.4rem;
  text-transform: none;
}

.c24 .c11 {
  margin: 0;
  margin-top: calc(1.6rem - 0.6rem);
  margin-bottom: 1.6rem;
}

.c24 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c24:hover a {
  color: #dc143c;
}

.c24:hover img {
  opacity: 0.8;
}

.c25 {
  max-width: 100%;
  -webkit-transition: opacity 300ms ease-in-out;
  transition: opacity 300ms ease-in-out;
}

.c22 {
  width: 100%;
}

.c23 {
  max-width: 120rem;
  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(28rem,1fr));
  gap: 3.2rem;
  padding: 3.2rem;
}

.c29 {
  text-align: center;
  border-top: 0.1rem solid #DDDDDD;
}

.c29 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c30 {
  font-size: calc(1.6rem+ 0.2rem);
  line-height: 1.5;
}

.c30 p {
  margin: 2.4rem 0;
}

.c30 a,
.c30 a:visited,
.c30 a:link {
  color: #dc143c;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c30 a:hover {
  -webkit-filter: brightness(50%);
  filter: brightness(50%);
}

.c30 code {
  font-family: monospace;
  color: #dc143c;
  font-size: 1.6rem;
  background: #DDDDDD;
  padding: 0.2rem;
  margin: 0.2rem;
}

.c30 pre {
  background: #000000;
  padding: 2.4rem;
  font-family: monospace;
  color: #FFFFFF;
  margin: 2.4rem 0;
  width: 100%;
  overflow-x: auto;
  font-size: 1.6rem;
}

.c30 pre code {
  color: inherit;
  background: inherit;
}

.c30 img {
  max-width: 100%;
}

.c30 .image {
  background: #DDDDDD;
  line-height: 0;
  margin: 2.4rem 0;
}

.c30 .image figcaption {
  font-size: 1.6rem;
  padding: 1.6rem;
  text-align: center;
  line-height: 1.3;
  max-width: 50%;
  float: right;
  margin: 2.4rem;
}

.c30 hr {
  border: none;
  border-bottom: 0.1rem solid #DDDDDD;
}

.c30 ul,
.c30 ol {
  margin: 4.0rem 4.0rem;
}

.c30 .table {
  width: 100%;
  overflow: hidden;
  overflow-x: auto;
  margin: 2.4rem;
}

.c30 table {
  width: 100%;
  border-collapse: collapse;
}

.c30 table td,
.c30 table th {
  padding: 1.6rem;
  border: 0.1rem solid #DDDDDD;
}

.c30 blockquote {
  border-left: 0.5rem solid #dc143c;
  color: #AAAAAA;
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
  padding-left: 2.4rem;
  font-style: italic;
  margin: 2.4rem;
}

.c31 {
  position: fixed;
  background: #000000;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 4rem;
  height: 4rem;
  bottom: 2rem;
  right: 2rem;
  z-index: 6;
}

.c7 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c13 > img {
  width: 15rem;
  height: 15rem;
  border-radius: 50%;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-bottom: 6.4rem;
  width: 100%;
  max-width: 96rem;
  color: #333333;
  font-size: 1.6rem;
  margin: 0 auto;
}

.c16 .c11 {
  margin: 0 0 calc(1.6rem - 1rem);
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  margin-left: 3.2rem;
  max-width: 48rem;
}

.c14 {
  display: block;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 1.6rem;
  font-size: 1.8rem;
  border-right: 0.5rem solid #000000;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c14:hover {
  border-right: 0.5rem solid #dc143c;
  color: #dc143c;
}

.c8 {
  background: #000000;
  padding: 3.2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  z-index: 1;
  width: 100%;
  max-width: 32rem;
  height: 100vh;
  top: 0;
  left: 0;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  overflow-y: auto;
  left: -30rem;
  overflow-y: hidden;
}

.c9 {
  margin: auto;
  width: 100%;
}

.c10 .c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  margin-bottom: 4.8rem;
}

.c10 .c11 img {
  border: 0.5rem solid #dc143c;
}

.c6 {
  position: fixed;
  top: 2.4rem;
  color: #FFFFFF;
  background: #000000;
  z-index: 2;
  width: 3rem;
  height: 3rem;
  left: 26rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  left: 1rem;
  color: #FFFFFF;
}

.c1 {
  position: fixed;
  top: 2rem;
  right: 2rem;
  z-index: 2;
}

.c2 {
  position: relative;
  display: inline-block;
  width: 5rem;
  height: 2.5rem;
  line-height: 0;
  font-size: 0;
  overflow: hidden;
  color: rgba(0,0,0,0);
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  width: 0;
  height: 0;
}

.c3:checked + .c4 {
  background: #dc143c;
}

.c3:focus + .c4 {
  box-shadow: 0 0 1px #dc143c;
}

.c3:checked + .c4:before {
  -webkit-transform: translateX(1.9rem);
  -ms-transform: translateX(1.9rem);
  transform: translateX(1.9rem);
  background: #000000;
}

.c5 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: #DDDDDD;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  border-radius: 2rem;
  box-shadow: 0 0 1px #000000;
}

.c5:before {
  content: '';
  position: absolute;
  height: 2.1rem;
  width: 2.1rem;
  left: 0.4rem;
  bottom: 0.2rem;
  background: #333333;
  border-radius: 50%;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c0 svg.search-ok-icon,
.c0 svg.search-cancel-icon {
  width: 2.4rem;
  height: 2.4rem;
  margin-left: 1rem;
}

.c0 svg.search-cancel-icon {
  color: #dc143c;
}

.c15 {
  margin-top: 6.4rem;
  padding: 0 3.2rem;
}

.c19 {
  margin: 0 auto;
  margin-bottom: 4.0rem;
  padding: 0 3.2rem;
  max-width: 120rem;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c20 {
  padding: 0.5rem 1.6rem;
}

.c20:disabled {
  outline: 0.1rem solid #dc143c;
}

.c21 {
  max-width: 120rem;
  width: 100%;
  margin: 0 auto;
  margin-bottom: 6.4rem;
}

.c28 {
  max-width: 120rem;
  width: 100%;
  margin: 0 auto;
  padding: 3.2rem;
}

@media (max-width:360px) {
  .c23 {
    grid-template-columns: 1fr;
  }
}

@media (max-width:768px) {
  .c30 {
    font-size: 2rem;
  }

  .c30 .image-style-side {
    max-width: 100%;
    float: none;
    margin: 0;
  }
}

@media (max-width:360px) {
  .c16 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-flow: column wrap;
    -ms-flex-flow: column wrap;
    flex-flow: column wrap;
  }

  .c16 > .c11 {
    margin: 0 0 2.4rem 0;
  }
}

@media (max-width:360px) {
  .c17 {
    margin-left: 0;
  }
}

@media (max-width:768px) {
  .c8 {
    left: -32rem;
  }
}

@media (max-width:768px) {
  .c6 {
    left: -0.5rem;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <label
        class="c2"
      >
        Toggle light and dark modes
        <input
          class="c3"
          type="checkbox"
          value="Dark mode active"
        />
        <span
          class="c4 c5"
        />
      </label>
    </div>
    <a
      aria-label="Open or close menu"
      class="c6"
      href="#"
      title="Open or close menu"
    >
      <svg
        aria-hidden="true"
        aria-label="Open menu"
        class="c7"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
        />
      </svg>
    </a>
    <div
      aria-hidden="true"
      class="c8"
    >
      <nav
        class="c9"
      >
        <div
          class="c10"
        >
          <h1
            class="c11 c12"
          >
            <a
              class="c13"
              href="/"
              target="_self"
            >
              <img
                alt="Otávio Miranda"
                src="https://res.cloudinary.com/dlizakp2a/image/upload/v1614698965/Ubuntu_gel_by_Midge_Mantissa_Sinnaeve_7caea7ddb4.jpg"
              />
            </a>
          </h1>
        </div>
        <a
          class="c14"
          href="#target"
          target="_self"
        >
          O texto
        </a>
        <a
          class="c14"
          href="#link2"
          target="_blank"
        >
          o LINK 2
        </a>
      </nav>
    </div>
    <div
      class="c15"
    >
      <header
        class="c16"
      >
        <h1
          class="c11 c12"
        >
          <a
            class="c13"
            href="/"
            target="_self"
          >
            <img
              alt="Otávio Miranda - Uma descrição para o seu blog."
              src="https://res.cloudinary.com/dlizakp2a/image/upload/v1614698965/Ubuntu_gel_by_Midge_Mantissa_Sinnaeve_7caea7ddb4.jpg"
            />
          </a>
        </h1>
        <div
          class="c17"
        >
          <h2
            class="c11 c18"
          >
            Otávio Miranda
          </h2>
          <p>
            Uma descrição para o seu blog.
          </p>
        </div>
      </header>
    </div>
    <div
      class="c19"
    >
      <input
        class="c20"
        name="q"
        placeholder="Encontre posts"
        type="search"
        value=""
      />
      <svg
        aria-hidden="true"
        aria-label="Input enabled"
        class="c7 search-ok-icon"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm4.59-12.42L10 14.17l-2.59-2.58L6 13l4 4 8-8z"
        />
      </svg>
    </div>
    <div
      class="c21"
    >
      <div
        class="c22"
      >
        <div
          class="c23"
        >
          <div
            class="c24"
          >
            <a
              href="/post/vis-nobis-veritus-maluisset-id-nonumy-adversarium"
            >
              <img
                alt="Vis nobis veritus maluisset id, nonumy adversarium"
                class="c25"
                src="https://res.cloudinary.com/dlizakp2a/image/upload/v1614698965/Ubuntu_gel_by_Midge_Mantissa_Sinnaeve_7caea7ddb4.jpg"
              />
            </a>
            <h2
              class="c11 c18"
            >
              <a
                href="/post/vis-nobis-veritus-maluisset-id-nonumy-adversarium"
              >
                Vis nobis veritus maluisset id, nonumy adversarium
              </a>
            </h2>
            <p
              class=""
            >
              Fugit aliquip erroribus eu eam, an mel vidit doctus. Vis nobis veritus maluisset id, nonumy adversarium neglegentur est ut. Tation persius pri eu, modo minim fastidii mei no. Ad tota pertinax definiebas eam.
            </p>
          </div>
          <div
            class="c24"
          >
            <a
              href="/post/sea-array-destructuring-dicat-fabulas-consetetur"
            >
              <img
                alt="Sea Array Destructuring dicat fabulas consetetur "
                class="c25"
                src="https://res.cloudinary.com/dlizakp2a/image/upload/v1614699042/Origin_of_nature_by_Julian_Tomasini_dcfdd17cbe.jpg"
              />
            </a>
            <h2
              class="c11 c18"
            >
              <a
                href="/post/sea-array-destructuring-dicat-fabulas-consetetur"
              >
                Sea Array Destructuring dicat fabulas consetetur 
              </a>
            </h2>
            <p
              class=""
            >
              Quod oblique mei ne, cetero delicatissimi sea cu, cu est harum dicit verterem. Tota forensibus ut usu, luptatum dignissim persecuti vel ex. Mea nostrud instructior cu, et referrentur theophrastus eum. Pro in iuvaret senserit.
            </p>
          </div>
          <div
            class="c24"
          >
            <a
              href="/post/quod-oblique-mei-ne-cetero-delicatissimi-sea"
            >
              <img
                alt="Quod oblique mei ne, cetero delicatissimi sea"
                class="c25"
                src="https://res.cloudinary.com/dlizakp2a/image/upload/v1614699042/Origin_of_nature_by_Julian_Tomasini_dcfdd17cbe.jpg"
              />
            </a>
            <h2
              class="c11 c18"
            >
              <a
                href="/post/quod-oblique-mei-ne-cetero-delicatissimi-sea"
              >
                Quod oblique mei ne, cetero delicatissimi sea
              </a>
            </h2>
            <p
              class=""
            >
              Et sed legere rationibus, vitae evertitur ad eam. Eu amet vero officiis vis. Ad nullam pericula neglegentur sit, vix ei regione legendos argumentum. Mei an quas convenire, nobis dicunt mei ut. 
            </p>
          </div>
        </div>
      </div>
      <div
        class="c26"
      >
        <button
          class="c27"
        >
          Carregar mais
        </button>
      </div>
    </div>
    <div
      class="c28"
    >
      <footer
        class="c29"
      >
        <div
          class="c30"
        >
          <p>
            O texto da footer
          </p>
        </div>
      </footer>
    </div>
    <a
      class="c31"
      href="#"
      title="Go to top"
    >
      <svg
        aria-hidden="true"
        class="c7"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 19h18a1.002 1.002 0 00.823-1.569l-9-13c-.373-.539-1.271-.539-1.645 0l-9 13A.999.999 0 003 19zm9-12.243L19.092 17H4.908L12 6.757z"
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`<PostsTemplate /> should match snapshot without posts 1`] = `
.c12 {
  color: #000000;
  line-height: 1.2;
  font-size: 2.4rem;
  text-transform: uppercase;
}

.c18 {
  color: #000000;
  line-height: 1.2;
  font-size: 2.4rem;
  text-transform: none;
}

.c22 {
  width: 100%;
}

.c23 {
  padding: 3.2rem;
  text-align: center;
  font-size: 1.6rem;
}

.c24 {
  max-width: 120rem;
  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(28rem,1fr));
  gap: 3.2rem;
  padding: 3.2rem;
}

.c26 {
  text-align: center;
  border-top: 0.1rem solid #DDDDDD;
}

.c26 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c27 {
  font-size: calc(1.6rem+ 0.2rem);
  line-height: 1.5;
}

.c27 p {
  margin: 2.4rem 0;
}

.c27 a,
.c27 a:visited,
.c27 a:link {
  color: #dc143c;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c27 a:hover {
  -webkit-filter: brightness(50%);
  filter: brightness(50%);
}

.c27 code {
  font-family: monospace;
  color: #dc143c;
  font-size: 1.6rem;
  background: #DDDDDD;
  padding: 0.2rem;
  margin: 0.2rem;
}

.c27 pre {
  background: #000000;
  padding: 2.4rem;
  font-family: monospace;
  color: #FFFFFF;
  margin: 2.4rem 0;
  width: 100%;
  overflow-x: auto;
  font-size: 1.6rem;
}

.c27 pre code {
  color: inherit;
  background: inherit;
}

.c27 img {
  max-width: 100%;
}

.c27 .image {
  background: #DDDDDD;
  line-height: 0;
  margin: 2.4rem 0;
}

.c27 .image figcaption {
  font-size: 1.6rem;
  padding: 1.6rem;
  text-align: center;
  line-height: 1.3;
  max-width: 50%;
  float: right;
  margin: 2.4rem;
}

.c27 hr {
  border: none;
  border-bottom: 0.1rem solid #DDDDDD;
}

.c27 ul,
.c27 ol {
  margin: 4.0rem 4.0rem;
}

.c27 .table {
  width: 100%;
  overflow: hidden;
  overflow-x: auto;
  margin: 2.4rem;
}

.c27 table {
  width: 100%;
  border-collapse: collapse;
}

.c27 table td,
.c27 table th {
  padding: 1.6rem;
  border: 0.1rem solid #DDDDDD;
}

.c27 blockquote {
  border-left: 0.5rem solid #dc143c;
  color: #AAAAAA;
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
  padding-left: 2.4rem;
  font-style: italic;
  margin: 2.4rem;
}

.c28 {
  position: fixed;
  background: #000000;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 4rem;
  height: 4rem;
  bottom: 2rem;
  right: 2rem;
  z-index: 6;
}

.c7 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c13 > img {
  width: 15rem;
  height: 15rem;
  border-radius: 50%;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-bottom: 6.4rem;
  width: 100%;
  max-width: 96rem;
  color: #333333;
  font-size: 1.6rem;
  margin: 0 auto;
}

.c16 .c11 {
  margin: 0 0 calc(1.6rem - 1rem);
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  margin-left: 3.2rem;
  max-width: 48rem;
}

.c14 {
  display: block;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 1.6rem;
  font-size: 1.8rem;
  border-right: 0.5rem solid #000000;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c14:hover {
  border-right: 0.5rem solid #dc143c;
  color: #dc143c;
}

.c8 {
  background: #000000;
  padding: 3.2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  z-index: 1;
  width: 100%;
  max-width: 32rem;
  height: 100vh;
  top: 0;
  left: 0;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  overflow-y: auto;
  left: -30rem;
  overflow-y: hidden;
}

.c9 {
  margin: auto;
  width: 100%;
}

.c10 .c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  margin-bottom: 4.8rem;
}

.c10 .c11 img {
  border: 0.5rem solid #dc143c;
}

.c6 {
  position: fixed;
  top: 2.4rem;
  color: #FFFFFF;
  background: #000000;
  z-index: 2;
  width: 3rem;
  height: 3rem;
  left: 26rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  left: 1rem;
  color: #FFFFFF;
}

.c1 {
  position: fixed;
  top: 2rem;
  right: 2rem;
  z-index: 2;
}

.c2 {
  position: relative;
  display: inline-block;
  width: 5rem;
  height: 2.5rem;
  line-height: 0;
  font-size: 0;
  overflow: hidden;
  color: rgba(0,0,0,0);
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  width: 0;
  height: 0;
}

.c3:checked + .c4 {
  background: #dc143c;
}

.c3:focus + .c4 {
  box-shadow: 0 0 1px #dc143c;
}

.c3:checked + .c4:before {
  -webkit-transform: translateX(1.9rem);
  -ms-transform: translateX(1.9rem);
  transform: translateX(1.9rem);
  background: #000000;
}

.c5 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: #DDDDDD;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  border-radius: 2rem;
  box-shadow: 0 0 1px #000000;
}

.c5:before {
  content: '';
  position: absolute;
  height: 2.1rem;
  width: 2.1rem;
  left: 0.4rem;
  bottom: 0.2rem;
  background: #333333;
  border-radius: 50%;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c0 svg.search-ok-icon,
.c0 svg.search-cancel-icon {
  width: 2.4rem;
  height: 2.4rem;
  margin-left: 1rem;
}

.c0 svg.search-cancel-icon {
  color: #dc143c;
}

.c15 {
  margin-top: 6.4rem;
  padding: 0 3.2rem;
}

.c19 {
  margin: 0 auto;
  margin-bottom: 4.0rem;
  padding: 0 3.2rem;
  max-width: 120rem;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c20 {
  padding: 0.5rem 1.6rem;
}

.c20:disabled {
  outline: 0.1rem solid #dc143c;
}

.c21 {
  max-width: 120rem;
  width: 100%;
  margin: 0 auto;
  margin-bottom: 6.4rem;
}

.c25 {
  max-width: 120rem;
  width: 100%;
  margin: 0 auto;
  padding: 3.2rem;
}

@media (max-width:360px) {
  .c24 {
    grid-template-columns: 1fr;
  }
}

@media (max-width:768px) {
  .c27 {
    font-size: 2rem;
  }

  .c27 .image-style-side {
    max-width: 100%;
    float: none;
    margin: 0;
  }
}

@media (max-width:360px) {
  .c16 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-flow: column wrap;
    -ms-flex-flow: column wrap;
    flex-flow: column wrap;
  }

  .c16 > .c11 {
    margin: 0 0 2.4rem 0;
  }
}

@media (max-width:360px) {
  .c17 {
    margin-left: 0;
  }
}

@media (max-width:768px) {
  .c8 {
    left: -32rem;
  }
}

@media (max-width:768px) {
  .c6 {
    left: -0.5rem;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <label
        class="c2"
      >
        Toggle light and dark modes
        <input
          class="c3"
          type="checkbox"
          value="Dark mode active"
        />
        <span
          class="c4 c5"
        />
      </label>
    </div>
    <a
      aria-label="Open or close menu"
      class="c6"
      href="#"
      title="Open or close menu"
    >
      <svg
        aria-hidden="true"
        aria-label="Open menu"
        class="c7"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
        />
      </svg>
    </a>
    <div
      aria-hidden="true"
      class="c8"
    >
      <nav
        class="c9"
      >
        <div
          class="c10"
        >
          <h1
            class="c11 c12"
          >
            <a
              class="c13"
              href="/"
              target="_self"
            >
              <img
                alt="Otávio Miranda"
                src="https://res.cloudinary.com/dlizakp2a/image/upload/v1614698965/Ubuntu_gel_by_Midge_Mantissa_Sinnaeve_7caea7ddb4.jpg"
              />
            </a>
          </h1>
        </div>
        <a
          class="c14"
          href="#target"
          target="_self"
        >
          O texto
        </a>
        <a
          class="c14"
          href="#link2"
          target="_blank"
        >
          o LINK 2
        </a>
      </nav>
    </div>
    <div
      class="c15"
    >
      <header
        class="c16"
      >
        <h1
          class="c11 c12"
        >
          <a
            class="c13"
            href="/"
            target="_self"
          >
            <img
              alt="Otávio Miranda - Uma descrição para o seu blog."
              src="https://res.cloudinary.com/dlizakp2a/image/upload/v1614698965/Ubuntu_gel_by_Midge_Mantissa_Sinnaeve_7caea7ddb4.jpg"
            />
          </a>
        </h1>
        <div
          class="c17"
        >
          <h2
            class="c11 c18"
          >
            Otávio Miranda
          </h2>
          <p>
            Uma descrição para o seu blog.
          </p>
        </div>
      </header>
    </div>
    <div
      class="c19"
    >
      <input
        class="c20"
        name="q"
        placeholder="Encontre posts"
        type="search"
        value=""
      />
      <svg
        aria-hidden="true"
        aria-label="Input enabled"
        class="c7 search-ok-icon"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm4.59-12.42L10 14.17l-2.59-2.58L6 13l4 4 8-8z"
        />
      </svg>
    </div>
    <div
      class="c21"
    >
      <div
        class="c22"
      >
        <p
          class="c23"
        >
          Nenhum post encontrado aqui =(
        </p>
        <div
          class="c24"
        />
      </div>
    </div>
    <div
      class="c25"
    >
      <footer
        class="c26"
      >
        <div
          class="c27"
        >
          <p>
            O texto da footer
          </p>
        </div>
      </footer>
    </div>
    <a
      class="c28"
      href="#"
      title="Go to top"
    >
      <svg
        aria-hidden="true"
        class="c7"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 19h18a1.002 1.002 0 00.823-1.569l-9-13c-.373-.539-1.271-.539-1.645 0l-9 13A.999.999 0 003 19zm9-12.243L19.092 17H4.908L12 6.757z"
        />
      </svg>
    </a>
  </div>
</div>
`;
